reduce size to prevent circle form being cropped

--- a/client/src/components/AnswerOption/styles.scss
+++ b/client/src/components/AnswerOption/styles.scss
@@ -1,6 +1,6 @@
 @mixin icon {
-  width: 28px;
-  height: 28px;
+  width: 26px;
+  height: 26px;
   border-radius: 50%;
 }
 
